--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "sassdoc-theme-default",
-  "version": "1.0.0",
+  "version": "1.1.0-rc.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/SassDoc/sassdoc-theme-default.git"
   },
   "dependencies": {
-    "sassdoc-theme-light": "^1.0.0"
+    "sassdoc-theme-light": "1.1.0-rc.5"
   }
 }
