--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   ],
   "dependencies": {
     "extend": "1.*",
+    "sassdoc-extras": "2.0.0-rc.4",
     "swig": "1.4.0",
     "swig-extras": "0.*",
-    "themeleon": "2.*",
-    "sassdoc-extras": "2.0.0-rc.4"
+    "themeleon": "^3.0.0"
   },
   "devDependencies": {
     "uglify-js": "^2.4.15"
