--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "README.md"
   ],
   "dependencies": {
+    "chroma-js": "^0.6.3",
     "extend": "1.*",
     "sassdoc-extras": "2.0.0-rc.4",
+    "themeleon": "^3.0.0",
     "swig": "1.4.0",
-    "swig-extras": "0.*",
-    "themeleon": "^3.0.0"
+    "swig-extras": "0.*"
   },
   "devDependencies": {
     "uglify-js": "^2.4.15"
