--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "view.json"
   ],
   "dependencies": {
+    "chroma-js": "^0.6.3",
     "extend": "1.*",
+    "sassdoc-extras": "^1.0.0",
     "swig": "1.4.0",
     "swig-extras": "0.*",
     "themeleon": "1.*",
-    "themeleon-swig": "0.*",
-    "sassdoc-extras": "^1.0.0"
+    "themeleon-swig": "0.*"
   },
   "devDependencies": {
     "uglify-js": "^2.4.15"
