--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "sassdoc-extras": "2.0.0-rc.4",
     "themeleon": "^3.0.0",
     "swig": "1.4.0",
-    "swig-extras": "0.*"
+    "swig-extras": "0.*",
+    "themeleon": "3.*"
   },
   "devDependencies": {
     "uglify-js": "^2.4.15"
