--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "README.md"
   ],
   "dependencies": {
+    "bluebird": "^2.8.2",
     "chroma-js": "^0.6.3",
     "extend": "1.*",
+    "html-minifier": "^0.6.9",
     "sassdoc-extras": "2.0.0-rc.4",
-    "themeleon": "^3.0.0",
     "swig": "1.4.0",
-    "swig-extras": "0.*"
+    "swig-extras": "0.*",
+    "themeleon": "^3.0.0"
   },
   "devDependencies": {
     "uglify-js": "^2.4.15"
