--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "SassDoc's default theme",
   "title": "SassDoc Default Theme",
   "author": "SassDoc team",
-  "version": "2.0.0-rc.14",
+  "version": "2.0.0",
   "keywords": [
     "sassdoc-theme"
   ],
