--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "SassDoc's default theme",
   "title": "SassDoc Default Theme",
   "author": "SassDoc team",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "keywords": [
     "sassdoc-theme"
   ],
@@ -22,11 +22,11 @@
   "dependencies": {
     "bluebird": "^2.8.2",
     "chroma-js": "^0.6.3",
-    "extend": "1.*",
+    "extend": "^1.0.0",
     "html-minifier": "^0.6.9",
-    "sassdoc-extras": "2.0.0-rc.10",
+    "sassdoc-extras": "^2.0.0",
     "swig": "1.4.0",
-    "swig-extras": "0.*",
+    "swig-extras": "^0.1.0",
     "themeleon": "^3.0.0"
   },
   "devDependencies": {
