Complete rewrite in ES6
This drops the Themeleon dependency, it only uses the Themeleon abstract
interface but without relying on the library.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-node_modules
+/assets/css/main.css.map
+/dist
+/node_modules
+/sassdoc
 .DS_Store
 .sass-cache
 npm-debug.log
-assets/css/main.css.map
-sassdoc/
