--- a/package.json
+++ b/package.json
@@ -14,22 +14,26 @@
   "files": [
     "assets",
     "views",
+    "dist",
     "default.json",
     "index.js",
     "LICENSE.md",
     "README.md"
   ],
   "dependencies": {
-    "bluebird": "^2.8.2",
     "chroma-js": "^0.6.3",
+    "core-js": "^0.4.10",
     "extend": "^1.0.0",
+    "fs-extra": "^0.1.0",
     "html-minifier": "^0.6.9",
+    "promise-denodeify": "^1.2.2",
     "sassdoc-extras": "^2.0.0",
     "swig": "1.4.0",
-    "swig-extras": "^0.0.1",
-    "themeleon": "^3.0.0"
+    "swig-extras": "^0.0.1"
   },
   "devDependencies": {
+    "6to5": "^3.2.1",
+    "jshint": "^2.6.0",
     "uglify-js": "^2.4.15"
   }
 }
