--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
   ],
   "main": "dist",
   "dependencies": {
-    "6to5-runtime": "^3.2.1",
     "chroma-js": "^0.6.3",
     "es6-denodeify": "^0.1.0",
+    "es6-promise": "^2.0.1",
     "extend": "^2.0.0",
     "fs-extra": "^0.16.3",
     "html-minifier": "^0.7.0",
