--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "swig-extras": "^0.0.1"
   },
   "devDependencies": {
-    "babel": "4.3.*",
+    "babel": "^4.4.0",
     "jshint": "^2.6.0",
     "uglify-js": "^2.4.15"
   }
