--- a/package.json
+++ b/package.json
@@ -22,19 +22,19 @@
   ],
   "main": "dist",
   "dependencies": {
-    "chroma-js": "^0.6.3",
+    "chroma-js": "^1.2.2",
     "es6-denodeify": "^0.1.0",
-    "es6-promise": "^2.0.1",
-    "extend": "^2.0.0",
+    "es6-promise": "^4.0.5",
+    "extend": "^3.0.0",
     "fs-extra": "^2.0.0",
     "html-minifier": "^3.3.1",
     "sassdoc-extras": "^2.4.0",
-    "swig": "1.4.0",
+    "swig": "^1.4.2",
     "swig-extras": "^0.0.1"
   },
   "devDependencies": {
     "babel": "^4.4.0",
-    "jshint": "^2.6.0",
+    "jshint": "^2.9.4",
     "uglify-js": "^2.4.15"
   }
 }
