--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type": "git",
     "url": "https://github.com/SassDoc/sassdoc-theme-default.git"
   },
+  "license": "MIT",
   "files": [
     "assets",
     "views",
