--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "license": "MIT",
   "files": [
+    "index.js",
     "assets",
     "views",
     "dist",
@@ -21,7 +22,6 @@
     "LICENSE.md",
     "README.md"
   ],
-  "main": "dist",
   "dependencies": {
     "babel-runtime": "^6.22.0",
     "chroma-js": "^1.2.2",
