Pin Swig dependency for now
- The patch update is a mess and none of our templates compiles now.
- We really need to switch template engine.

--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "fs-extra": "^2.0.0",
     "html-minifier": "^3.3.1",
     "sassdoc-extras": "^2.4.0",
-    "swig": "^1.4.2",
-    "swig-extras": "^0.0.1"
+    "swig": "1.4.0",
+    "swig-extras": "0.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
